Fix @created; remove unused fields; remove redundant null tests
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@323596 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: e4192e69bd6b96732af8295438581d5d778c2721